# rust_sample

./: Cargo.toml
resource/: sample.txt
src/01_function/: main.rs
src/02_hello_world/: main.rs
src/03_variable/: main.rs
src/04_read_file/: main.rs
